# ROS2_Course

./: README.md
install/: local_setup.sh  setup.sh
install/ros2_cpp_tutorial/lib/ros2_cpp_tutorial/: client  cpp_node  custom_msg_publisher  fast_agent  led_client  led_service  listener  minimal_param_node  p1_publisher  p1_subscriber  p2_fast_agent  p2_slow_agent  server  slow_agent  square  talker  turtlebot_controller  turtlebot_visualizer
install/ros2_cpp_tutorial/share/ros2_cpp_tutorial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_cpp_tutorial/share/ros2_cpp_tutorial/cmake/: ros2_cpp_tutorialConfig-version.cmake  ros2_cpp_tutorialConfig.cmake
install/ros2_cpp_tutorial/share/ros2_cpp_tutorial/environment/: ament_prefix_path.dsv  path.dsv
install/ros2_cpp_tutorial/share/ros2_cpp_tutorial/launch/: cpp_parameters_launch.py  multi_turtlebot_control_launch.py  talker_listener_launch.py  turtlebot_control_launch.py  turtlebot_square_control_launch.py  turtlebot_visualization_launch.py  turtlesim_multiple_launch.py
install/ros2_interfaces_tutorial/share/ros2_interfaces_tutorial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_interfaces_tutorial/share/ros2_interfaces_tutorial/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ros2_interfaces_tutorial__rosidl_generator_pyExport-noconfig.cmake  export_ros2_interfaces_tutorial__rosidl_typesupport_fastrtps_cExport-relwithdebinfo.cmake  export_ros2_interfaces_tutorial__rosidl_typesupport_fastrtps_cExport.cmake  export_ros2_interfaces_tutorial__rosidl_typesupport_fastrtps_cppExport-relwithdebinfo.cmake  ros2_interfaces_tutorialConfig-version.cmake  ros2_interfaces_tutorialConfig.cmake  ros2_interfaces_tutorial__rosidl_typesupport_cExport.cmake  ros2_interfaces_tutorial__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros2_interfaces_tutorial__rosidl_typesupport_introspection_cExport-relwithdebinfo.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ros2_interfaces_tutorial/share/ros2_interfaces_tutorial/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/ros2_interfaces_tutorial/share/ros2_interfaces_tutorial/msg/: Sphere.idl  Spheres.idl
install/ros2_python_tutorial/lib/ros2_python_tutorial/: client  custom_msg_publisher  double_listener  fast_agent  minimal_param_node  python_node  server  slow_agent  square  talker  toggle_led_service  turtlebot_controller  turtlebot_visualizer
install/ros2_python_tutorial/share/ros2_python_tutorial/: package.bash  package.ps1  package.sh  package.xml  package.zsh
install/tutorial_interface/share/tutorial_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/ros2_cpp_tutorial/: CMakeLists.txt  package.xml
src/ros2_cpp_tutorial/launch/: cpp_parameters_launch.py  multi_turtlebot_control_launch.py  talker_listener_launch.py  turtlebot_control_launch.py  turtlebot_square_control_launch.py  turtlebot_visualization_launch.py  turtlesim_multiple_launch.py
src/ros2_cpp_tutorial/src/: add_two_ints_client.cpp  cpp_node.cpp  custom_msg_publisher.cpp  p1_publisher.cpp  p1_subscriber.cpp  p2_fast_agent.cpp  p2_slow_agent.cpp  square.cpp  toggle_led_client.cpp  toggle_led_service.cpp  turtlebot_controller.cpp  turtlebot_visualizer.cpp
src/ros2_interfaces_tutorial/: CMakeLists.txt
src/ros2_interfaces_tutorial/install/: local_setup.sh  setup.sh
src/ros2_interfaces_tutorial/log/: latest_build
src/ros2_interfaces_tutorial/msg/: Spheres.msg
src/ros2_multi_agent_apf/include/: agent.h
src/ros2_multi_agent_apf/launch/: four_agent_simulation_launch.py  single_agent_simulation_launch.py  two_agent_simulation_launch.py
src/ros2_multi_agents_apf/config/: rviz_config_sim.rviz
src/ros2_multi_agents_apf/launch/: mission_multi_agent_4.yaml  multi_agent_simulation_launch.py
src/ros2_multi_agents_apf/mission/: mission_multi_agent_4.yaml
src/ros2_multi_agents_apf/src/: agent.cpp
src/ros2_python_tutorial/: package.xml  setup.py
src/ros2_python_tutorial/launch/: python_parameters_launch.py  turtlebot_square_control_launch.py  turtlebot_visualization_launch.py  turtlesim_mimic_launch.py
src/ros2_python_tutorial/ros2_python_tutorial/: custom_msg_publisher.py  p1_publisher.py  p1_subscriber.py  p2_fast_agent.py  p2_slow_agent.py  p3_led_client.py  p3_led_service.py  square.py  turtlebot_visualizer.py
src/ros2_term_project/: CMakeLists.txt  package.xml  setup.py
src/ros2_term_project/include/: cmd_publisher.h  map.h  map_exploration_env.hpp
src/ros2_term_project/launch/: simulation_launch.py
src/ros2_term_project/logs/: ddpg_agent_log.txt
src/ros2_term_project/logs/tensorboard/20241216-112216/: events.out.tfevents.1734315736.jewoo-System-Product-Name.182141.0.v2
src/ros2_term_project/logs/tensorboard/20241216-112411/: events.out.tfevents.1734315851.jewoo-System-Product-Name.182939.0.v2
src/ros2_term_project/logs/tensorboard/20241217-133448/: events.out.tfevents.1734410088.jewoo-System-Product-Name.220405.0.v2
src/ros2_term_project/logs/tensorboard/20241221-064549/: events.out.tfevents.1734731149.jewoo-System-Product-Name.6478.0.v2
src/ros2_term_project/logs/tensorboard/20241223-141913/: events.out.tfevents.1734931153.jewoo-System-Product-Name.10993.0.v2
src/ros2_term_project/logs/tensorboard/20241223-143349/: events.out.tfevents.1734932029.jewoo-System-Product-Name.11462.0.v2
src/ros2_term_project/scripts/: ddpg_agent.py
src/ros2_term_project/src/: cmd_publisher.cpp  map.cpp  map_exploration_env.cpp  map_exploration_node.cpp
(+429 files in other folders)
